# rgbd_align

./: CMakeLists.txt  README.md  package.xml
launch/: demo.launch  gazebo.launch
meshes/Cole_Hardware_Bowl_Scirocco_YellowBlue/: model.config  model.sdf
meshes/Mens_Gold_Cup_ASV_2Eye_Boat_Shoe_in_Cognac_Leather/: metadata.pbtxt  model.config  model.sdf
rviz/: rgbd_align.rviz  rgbd_gazebo.rviz
scripts/: rgbd_align.py
urdf/google_scan/: bowl.xacro  shoe.xacro
urdf/realsense/: _d415.urdf.xacro  _d435.urdf.xacro  _d435i.urdf.xacro  _d455.urdf.xacro  _l515.urdf.xacro  _r410.urdf.xacro  _r430.urdf.xacro  _usb_plug.urdf.xacro  d435_gazebo.xacro  test_d415_camera.urdf.xacro  test_d435_camera.urdf.xacro  test_d435_multiple_cameras.urdf.xacro  test_d435i_camera.urdf.xacro  test_d455_camera.urdf.xacro  test_l515_camera.urdf.xacro  test_r410_camera.urdf.xacro  test_r430_camera.urdf.xacro
world/: rgbd.world
