<?xml version="1.0"?>
<package format="2">
  <name>rgbd_gazebo</name>
  <version>0.0.0</version>
  <description>The rgbd_gazebo package</description>
  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
